# simulation

./: README.md
test_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
test_ws/install/assembly_1_robot_arm/share/ament_index/resource_index/package_run_dependencies/: assembly_1_robot_arm
test_ws/install/assembly_1_robot_arm/share/assembly_1_robot_arm/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
test_ws/install/assembly_1_robot_arm/share/assembly_1_robot_arm/launch/: display.launch.py  gazebo.launch.py
test_ws/install/assembly_1_robot_arm/share/assembly_1_robot_arm/meshes/: END_effector.STL  Link_3.STL  Link_4.STL  base_link.STL
test_ws/install/assembly_1_robot_arm/share/assembly_1_robot_arm/urdf/: assembly_1_robot_arm.urdf
test_ws/install/robot_gazebo/share/robot_gazebo/: package.sh  package.xml
test_ws/install/robot_gazebo/share/robot_gazebo/launch/: ws_sdf.py
test_ws/install/robot_gazebo/share/robot_gazebo/sdf/: robot.sdf
test_ws/log/: latest_build
test_ws/src/assembly_1_robot_arm/: CMakeLists.txt
test_ws/src/assembly_1_robot_arm/config/: joint_names_Assembly 1 (robot arm).yaml
test_ws/src/assembly_1_robot_arm/meshes/: Link_1.STL  Link_2.STL
test_ws/src/assembly_1_robot_arm/rviz/: config.rviz
test_ws/src/assembly_1_robot_arm/urdf/: Assembly 1 (robot arm).csv  goodversioin.txt
